--- a/Javascript/19Sept 2022-JS-9(DOM And JSON)/DOM Data 3/index.html
+++ b/Javascript/19Sept 2022-JS-9(DOM And JSON)/DOM Data 3/index.html
@@ -1,18 +1,20 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="./data.js" type="text/javascript"></script>
 </head>
 
 <body onload="displayData()">
     <nav class="navbar navbar-dark bg-dark">
-        <a href="#">Employee Data Of Salary</a>
+        <a href="#" class="navbar-brand">Employee Data Of Salary</a>
     </nav>
     <div class="container mt-5">
         <div class="row">
             <div class="col-6">
-                <table>
-                    <thead>
+                <table class="table table-hover table-striped">
+                    <thead class="bg-dark text-white">
                         <th>ID</th>
                         <th>first_name</th>
                         <th>Gender</th>
